# Plug_and_Charge

./: PnC.c  PnC_Crypto_Port.h  PnC_Helper.cpp  PnC_Helper.h  README.md  README_PnC_PKI.md  pnc-pki-create_update.tar
threadx/: .gitignore  CMakeLists.txt
threadx/cmake/: riscv-none-elf-rv32imc.cmake  riscv32-unknown-elf-rv32imc.cmake  riscv32_gnu.cmake  riscv64-gcc-rv32imc.cmake  threadx_riscv_port.cmake  win32.cmake  win64.cmake  xtensa.cmake
threadx/common/inc/: tx_api.h  tx_user_sample.h
threadx/common/src/: tx_initialize_high_level.c  tx_initialize_kernel_enter.c  tx_queue_cleanup.c  tx_timer_initialize.c  tx_trace_object_register.c  tx_trace_object_unregister.c
threadx/common_modules/module_manager/utilities/: module_to_binary.c  module_to_c_array.c
threadx/common_smp/: CMakeLists.txt
threadx/common_smp/src/: tx_thread_system_resume.c  tx_thread_system_suspend.c
threadx/ports/arc_em/metaware/inc/: tx_port.h
threadx/ports/arc_hs/metaware/inc/: tx_port.h
threadx/ports/arm11/ac5/inc/: tx_port.h
threadx/ports/arm11/gnu/example_build/: build_threadx.sh  build_threadx_sample.sh
threadx/ports/arm11/gnu/inc/: tx_port.h
threadx/ports/arm11/iar/example_build/: sample_threadx.c
threadx/ports/arm11/iar/inc/: tx_port.h
threadx/ports/arm9/ac5/inc/: tx_port.h
threadx/ports/arm9/gnu/example_build/: build_threadx.sh  build_threadx_sample.sh
threadx/ports/arm9/gnu/inc/: tx_port.h
threadx/ports/arm9/iar/example_build/: sample_threadx.c
threadx/ports/arm9/iar/inc/: tx_port.h
threadx/ports/c667x/ccs/inc/: tx_port.h
threadx/ports/risc-v32/clang/: CMakeLists.txt
threadx/ports/risc-v32/common/: tx_port_riscv32_common.h
threadx/ports/risc-v32/gnu/: CMakeLists.txt
threadx/ports/risc-v64/gnu/: CMakeLists.txt
threadx/ports/risc-v_common/inc/: csr.h
threadx/ports/win64/vs_2022/: CMakeLists.txt
threadx/ports/xtensa/xcc/: readme_threadx.txt
threadx/ports_smp/cortex_a9_smp/gnu/: CMakeLists.txt
threadx/ports_smp/win64/vs_2022/: CMakeLists.txt  readme_threadx.txt
threadx/scripts/: build_smp.ps1  build_smp.sh  build_tx.ps1  build_tx.sh  build_tx_riscv.sh  cmake_bootstrap.sh  copy_armv7_m.sh  copy_armv8_m.sh  copy_module_armv7_m.sh  install.sh  install_riscv.sh  prepare_release.sh  sdl_check.sh  test_smp.ps1  test_smp.sh  test_tx.ps1  test_tx.sh  test_tx_riscv.sh  tx_windows_common.ps1
threadx/test/shared/regression/: testcontrol_weak_defaults.c
threadx/test/smp/cmake/: CMakeLists.txt  coverage.sh
threadx/test/smp/regression/: testcontrol.c  threadx_block_memory_basic_test.c  threadx_block_memory_error_detection_test.c  threadx_block_memory_suspension_test.c  threadx_block_memory_suspension_timeout_test.c  threadx_block_memory_thread_terminate_test.c  threadx_byte_memory_basic_test.c  threadx_byte_memory_information_test.c  threadx_byte_memory_prioritize_test.c  threadx_byte_memory_suspension_timeout_test.c  threadx_byte_memory_thread_contention_test.c  threadx_event_flag_information_test.c  threadx_event_flag_isr_set_clear_test.c  threadx_event_flag_isr_wait_abort_test.c  threadx_event_flag_single_thread_terminate_test.c  threadx_event_flag_suspension_consume_test.c  threadx_event_flag_suspension_different_bits_test.c  threadx_event_flag_suspension_test.c  threadx_event_flag_suspension_timeout_test.c  threadx_event_flag_thread_terminate_test.c  threadx_initialize_kernel_setup_test.c  threadx_mutex_basic_test.c  threadx_mutex_delete_test.c  threadx_mutex_preemption_test.c  threadx_mutex_priority_inheritance_test.c  threadx_mutex_proritize_test.c  threadx_mutex_suspension_timeout_test.c  threadx_queue_basic_four_word_test.c  threadx_queue_basic_sixteen_word_test.c  threadx_queue_empty_suspension_test.c  threadx_queue_flush_no_suspension_test.c  threadx_queue_front_send_test.c  threadx_queue_full_suspension_test.c  threadx_queue_information_test.c  threadx_queue_thread_terminate_test.c  threadx_semaphore_basic_test.c  threadx_semaphore_ceiling_put_test.c  threadx_semaphore_delete_test.c  threadx_semaphore_preemption_test.c  threadx_semaphore_prioritize.c  (+42 more)
threadx/test/tx/cmake/: CMakeLists.txt  coverage.sh
threadx/test/tx/regression/: testcontrol.c  threadx_block_memory_basic_test.c  threadx_block_memory_information_test.c  threadx_block_memory_prioritize_test.c  threadx_block_memory_suspension_timeout_test.c  threadx_byte_memory_basic_test.c  threadx_byte_memory_suspension_test.c  threadx_byte_memory_suspension_timeout_test.c  threadx_byte_memory_thread_contention_test.c  threadx_byte_memory_thread_terminate_test.c  threadx_event_flag_basic_test.c  threadx_event_flag_isr_set_clear_test.c  threadx_event_flag_isr_wait_abort_test.c  threadx_event_flag_suspension_different_bits_consume_test.c  threadx_event_flag_suspension_timeout_test.c  threadx_initialize_kernel_setup_test.c  threadx_interrupt_control_test.c  threadx_mutex_information_test.c  threadx_mutex_nested_priority_inheritance_test.c  threadx_mutex_no_preemption_test.c  threadx_mutex_priority_inheritance_test.c  threadx_mutex_suspension_timeout_test.c  threadx_mutex_thread_terminate_test.c  threadx_queue_basic_eight_word_test.c  threadx_queue_basic_max_message_size_test.c  threadx_queue_basic_one_word_test.c  threadx_queue_basic_two_word_test.c  threadx_queue_flush_test.c  threadx_queue_prioritize.c  threadx_queue_suspension_timeout_test.c  threadx_semaphore_information_test.c  threadx_semaphore_non_preemption_test.c  threadx_semaphore_timeout_test.c  threadx_test_port.h  threadx_thread_basic_execution_test.c  threadx_thread_basic_time_slice_test.c  threadx_thread_completed_test.c  threadx_thread_delayed_suspension_test.c  threadx_thread_information_test.c  threadx_thread_multi_level_preemption_threshold_test.c  (+18 more)
threadx/utility/execution_profile_kit/: tx_execution_profile.h
threadx/utility/rtos_compatibility_layers/OSEK/: demo_osek.c
threadx/utility/rtos_compatibility_layers/posix/: posix_demo.c  posix_signal_nested_test.c  posix_signal_resume_thread_test.c  posix_signal_self_send_test.c  posix_signal_sigmask_test.c  posix_signal_sigwait_test.c  posix_signal_suspended_thread_test.c
(+519 files in other folders)
